--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -11,26 +11,28 @@
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
   <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Dancing+Script&family=Shadows+Into+Light&family=Patrick+Hand&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/footer.css">
-  
 </head>
-<body>
-<script type="text/javascript" src="js/scroll.js"></script>
-<div id="navbar" style="background-color:#1b262c;">
-  <div class="col-sm-2">
-  <a href="#default" id="logo"><img src="img/logo.png" style="height:300px;width:300px;" id="log"></a></div>
-  <div class="col-sm-6">
-  <h1 id="comp" style="font-size:65px;color:white;font-family:sofia;padding-left:200px;color:#be5683;">Masterpieces Ltd.</h1>
-  <h2 id="comp1" style="font-size:25px;color:white;font-family:monospace;padding-left:200px;color:#848ccf;">Inhale Possibility, Exhale Creativity.</h2>
+<body style="background-color:#e7e5e8;">
+  <nav class="navbar navbar-default" style="margin-bottom:0px;">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="home" style="font-family:sofia;color:#be5683;">Masterpieces Ltd.</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="home">Home</a></li>
+      <li ><a  href="#">Artists</a>
+      </li>
+      <li><a href="paintings">Paintings</a></li>
+      <li><a href="about">About Us</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
   </div>
-  <div class="col-sm-4">
-  <div id="navbar-right">
-    <button class="button1" href="#home" >Home</button>
-    <button class="button2" href="#contact">Login</button>
-    <button class="button3" href="#about">Sign Up</button>
-  </div>
-</div>
-</div>
+</nav>
 </header>
