--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>About</title>
-	<link rel="icon"  href="/img/weather.png">
-	<link rel="stylesheet" type="text/css" href="./css/styles.css">
-</head>
-<body>
-   <div class="main-content">
-   	{{>header}}
-   	<p>This site was created by Srivathsan S.It uses data from mapbox.com and fullstackewather.com!</p>
-   	<img class="portrait" src="/img/myphoto1.jpg">
-   </div>
-
-   {{>footer}}
-</body>
-</html>
+{{>header}}
+<div class="page-container" style="background-color: #ffffff;margin-bottom: 0px;">
+	<button class="button button5">ABOUT</button>
+   	<img src="img/back1.png" style="display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;height:280px;padding-top:0px;padding-bottom:10px;"
+  ><h1 style="text-align: center;font-weight: bold;font-family:'Shadows Into Light';">The ‘Earth’ Without ‘Art’ Is Just ‘Eh.’</h1>
+	<br>
+	<br>
+	<p style="text-align: center;font-weight: lighter;font-family: 'Crimson Text';font-size: 25px;">Every artist dips his brush in his own soul, and paints his own nature into his <br>pictures. We at Masterpieces Ltd. house the most fitting artworks made by such artists.<br><br>The most revolutionary ideas are not sellable, but only mind-changing. So experience the emotion <br>of art by renting it from us at a affordable price.Whether you're selling a house and need some large artworks<br> to bring life to your rooms or fitting out an office or decking out your fully furnished rental<br> property - we have a varierty of options to suit your needs.<br><br> Masterpieces Ltd, backed by the Elite-4 Group, based in Coimbatore and established in the year 2020, has <br>collectibles from world over by upcoming and established artists.<br><br>Guided by stalwarts in the industry and master curators, we ensure our clients much more than just<br> a visual treat. Connoisseur or novice, looking to sell, gift or invest in art we will be glad<br> to take you through it stroke by stroke.</p>
+</div>
+{{>footer}}
