--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,11 +1,30 @@
 {{>header }}
+<div class='container'>
+  <h1 style="text-align:center;padding-top:1%;font-family:sofia;font-size:64px;color:#be5683;text-decoration: underline;">Masterpieces Ltd.</h1>
+    <h2 style="text-align:center;padding-top:1%;font-family:monospace;color:#848ccf;">Inhale Possibility, Exhale Creativity.</h2>
+  <img src="img/pencil.jpeg" style="width:100%;height:600px;opacity:1;">
+  <div class="sonar-wrapper" >
+  <div class="sonar-emitter">
+    <div style="padding-top:25px;padding-left:11px;font-size:22px;font-family: monospace;"><a href="paintings" style="color:#000000;">RENT</a></div>
+    <div class="sonar-wave"></div>
+  </div>
+</div>
+<div class="sonar-wrapper1" >
+  <div class="sonar-emitter1">
+    <div style="padding-top:24px;padding-left:13px;font-size:22px;font-family: monospace;"><a href="paintings" style="color:#000000;">SELL</a></div>
+    <div class="sonar-wave1"></div>
+  </div>
+</div>
+</div>
 
-<form input="action" method="POST" style="padding-top:400px;background-color:#000000;padding-left:100px;">
-  <label for="search">First name:</label><br>
-  <input type="text" id="search" value="Search" style="background-color:#2e3131;color:white;width:700px;"><br><br>
-  <input type="submit" value="Submit">
-</form>
-<div class='col-sm-12' style="background-color:  #2e3131;padding-bottom: 20px;">
+
+
+
+
+
+<h3 style="text-align:center;font-size:30px;font-family:monospace;color:#ff5722;font-weight:lighter;text-decoration: underline;">FEATURED PAINTINGS</h3>
+
+<div class='col-sm-12' style="padding-bottom: 20px;padding-top:10px;">
   <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 100%;padding-top: 0px;">
     <!-- Indicators -->
     <ol class="carousel-indicators">
