--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -6,20 +6,16 @@
         <div class="row">
           <div class="col-sm-12 col-md-6">
             <h6>About</h6>
-            <p class="text-justify">Galaxy Medical Equipments is designed for creating, communicating and delivering value and satisfaction to customers and for managing customer relationships in ways that benefit organization and its stake holders!
-
--Our aim is to keep up the customer satisfaction!</p>
+            <p class="text-justify">Masterpieces Ltd. is designed for selling and renting of collectibles from world over by upcoming and established artists. Art is a creative extension of one's personality and we house the most fitting artworks for it!</p>
           </div>
 
           <div class="col-xs-6 col-md-3">
             <h6>Categories</h6>
             <ul class="footer-links">
-              <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
-              <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
-              <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
-              <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
-              <li><a href="http://scanfcode.com/category/android/">Android</a></li>
-              <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
+              <li><a href="#">Artists</a></li>
+              <li><a href="#">Paintings</a></li>
+              <li><a href="#">Sell</a></li>
+              <li><a href="#">Rent</a></li>
             </ul>
           </div>
 
@@ -40,7 +36,7 @@
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
-         <a href="#">Galaxy Medical Equipments</a>.
+         <a href="#">Masterpieces Ltd.</a>
             </p>
           </div>
 
