updated until orders

--- a/templates/partials/log_header.hbs
+++ b/templates/partials/log_header.hbs
@@ -29,7 +29,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="home">Home</a></li>
-      <li ><a  href="#">Artists</a>
+      <li ><a  href="orders">My Orders</a>
       </li>
       <li><a href="paintings">Paintings</a></li>
       <li><a href="about">About Us</a></li>
