--- a/templates/partials/logged_header.hbs
+++ b/templates/partials/logged_header.hbs
@@ -21,14 +21,14 @@
   <nav class="navbar navbar-default" style="margin-bottom:0px;">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="home" style="font-family:sofia;color:#be5683;">Masterpieces Ltd.</a>
+      <a class="navbar-brand" href="../home" style="font-family:sofia;color:#be5683;">Masterpieces Ltd.</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="home">Home</a></li>
-      <li ><a  href="#">Artists</a>
+      <li class="active"><a href="../home">Home</a></li>
+      <li ><a  href="../orders">My Orders</a>
       </li>
-      <li><a href="paintings">Paintings</a></li>
-      <li><a href="about">About Us</a></li>
+      <li><a href="../paintings">Paintings</a></li>
+      <li><a href="../about">About Us</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
@@ -36,8 +36,8 @@
           <div class="dropbtn1"> Welcome! {{username}} &#9660;
           </div>
           <div class="dropdown1-content1">
-            <a href="profile">Profile</a>
-            <a href="logout">Log Out</a>
+            <a href="../{{username}}/profile">Profile</a>
+            <a href="../logout">Log Out</a>
           </div>
         </div>
       </li>
