--- a/templates/partials/login_page_header.hbs
+++ b/templates/partials/login_page_header.hbs
@@ -29,7 +29,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="home">Home</a></li>
-      <li ><a  href="#">Artists</a>
+      <li ><a  href="orders">My Orders</a>
       </li>
       <li><a href="paintings">Paintings</a></li>
       <li><a href="about">About Us</a></li>
@@ -40,7 +40,7 @@
           <div class="dropbtn1"> Welcome! {{username}} &#9660;
           </div>
           <div class="dropdown1-content1">
-            <a href="profile">Profile</a>
+            <a href="{{username}}/profile">Profile</a>
             <a href="logout">Log Out</a>
           </div>
         </div>
