--- a/templates/views/sell.hbs
+++ b/templates/views/sell.hbs
@@ -41,12 +41,13 @@
             	<input type="date" id="art_dodeath" class="fadeIn third" name="art_dodeath" placeholder="Date of Death">
         </div>
         <div class="col-sm-4" style="padding-top:100px;">
+              <input type="text" id="art_phone_no" class="fadeIn third" name="art_phone_no" placeholder="Mobile Number">
             	<input type="text" id="art_street" class="fadeIn third" name="art_street" placeholder="Street" >
             	<input type="text" id="art_city" class="fadeIn third" name="art_city" placeholder="City">
             	<input type="text" id="art_state" class="fadeIn third" name="art_state" placeholder="State">
             	<input type="text" id="art_country" class="fadeIn third" name="art_country" placeholder="Country">
             	<label for="img">Select image:</label>
-  				<input type="file" id="pain_img" name="pain_img" accept="image/x-png,image/gif,image/jpeg">
+  				<input type="file" id="pain_img" name="pain_img" accept="image/x-png,image/gif,image/jpeg" required>
             	<input type="submit" class="fadeIn fourth" value="SUBMIT">
       		</div>
          </div>
