--- a/templates/views/painting_info.hbs
+++ b/templates/views/painting_info.hbs
@@ -6,20 +6,24 @@
 <div class="container" style="background-color:#f5f1da;width: 100%;">
 	<div class="row">
 	<div class="col-sm-7" style="border-right: 2px solid black;">
-		<img src="../img/p8.jpg" style="height: 600px;width: 99%;margin-left:10px;margin-top:10px;margin-bottom:10px;">
+		<img src="../{{pain_info.pic_path}}" style="height: 600px;width: 99%;margin-left:10px;margin-top:10px;margin-bottom:10px;">
 	</div>
 	<div class="col-sm-5">
 		<div class="row">
 		 <div class="col-sm-5" style="width:100%;">
-         <h1 style="text-align: center;padding-top: 200px;text-transform: uppercase;font-family:monospace;">Forest Scenary 1</h1>
-         <div style="text-align: center;font-size:30px;padding-top: 10px;font-family: 'Patrick Hand';font-weight: lighter;">A forest scene painted by John wick using water color on a paper.</div>
+         <h1 style="text-align: center;padding-top: 200px;text-transform: uppercase;font-family:monospace;">{{pain_info.Title}}</h1>
+         <div style="text-align: center;font-size:30px;padding-top: 10px;font-family: 'Patrick Hand';font-weight: lighter;">{{pain_info.Description}}</div>
     	</div>
         </div>
     
     <div class="row">
         <div class="container" style="width:100%;padding-top: 40px;padding-left: 100px;">
-			<div  class="opt1" style="background-color: #79d70f;width:40%;float:left;text-align: center;border:2px solid black;font-size:40px;">In Stock</div>
-			<a href=""><button class="button_pain_info" >RENT</button></a>
+            {{#if pain_info.isHired}}
+                <div class="opt2" style="background-color: #ec0101;width:40%;float:left;text-align: center;border:2px solid black;font-size:40px;">SOLD</div>
+            {{else}}
+                <div class="opt1" style="background-color: #79d70f;width:40%;float:left;text-align: center;border:2px solid black;font-size:40px;">In Stock</div>
+            {{/if}}
+			<a href="../add_order/{{pain_info.painting_ID}}"><button class="button_pain_info" >RENT</button></a>
 			</div>
 	</div>
 	</div>
@@ -31,25 +35,25 @@
          </div>
          <div class="col-sm-4" style="border: 2px solid black;">
          	<h2 style="text-align: center;font-size:20px;text-transform: uppercase;font-family: monospace;color: red;">Price</h2>
-         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">Rs. 500</div>
+         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">{{pain_info.Price}}</div>
          </div>
          <div class="col-sm-4" style="border: 2px solid black;">
          	<h2 style="text-align: center;font-size:20px;text-transform: uppercase;font-family: monospace;color: red;">Dimensions</h2>
-         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">14" x 11"</div>
+         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">{{pain_info.Width}}" x {{pain_info.Height}}"</div>
          </div>
 	</div>
 	<div class="row" style="background-color: #e3dfc8;">
          <div class="col-sm-4" style="border: 2px solid black;">
          	<h2 style="text-align: center;font-size:20px;text-transform: uppercase;font-family: monospace;color: red;">Date Painted</h2>
-         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">10/12/2018</div>
+         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">{{pain_info.Date_painted}}</div>
          </div>
          <div class="col-sm-4" style="border: 2px solid black;">
          	<h2 style="text-align: center;font-size:20px;text-transform: uppercase;font-family: monospace;color: red;">Theme</h2>
-         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">Abstract</div>
+         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">{{pain_info.Genre}}</div>
          </div>
          <div class="col-sm-4" style="border: 2px solid black;">
          	<h2 style="text-align: center;font-size:20px;text-transform: uppercase;font-family: monospace;color: red;">Weight</h2>
-         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">200 grms</div>
+         	<div style="text-align: center;font-size:30px;font-family: 'Patrick Hand';color: darkgreen;">{{pain_info.Weight}} grms</div>
          </div>
 		</div>
 </div>
