--- a/templates/views/order.hbs
+++ b/templates/views/order.hbs
@@ -64,7 +64,7 @@
                 {{/each}}
             </form>
         </div>
-        <br><br><input type="submit" class="fadeIn fourth" style="background: #79d70f" value="Place Order">
+        <br><br><a href='/order_paintings'><input type="submit" class="fadeIn fourth" style="background: #79d70f" value="Place Order"><a>
         </div>
     </div>
 </div>
