--- a/templates/partials/logged_header.hbs
+++ b/templates/partials/logged_header.hbs
@@ -14,7 +14,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Dancing+Script&family=Shadows+Into+Light&family=Patrick+Hand&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  {{#if isSell}}
+  <link rel="stylesheet" type="text/css" href="/css/sell_css.css">
+  {{else}}
   <link rel="stylesheet" type="text/css" href="/css/footer.css">
+  {{/if}}
 
 </head>
 <body style="background-color:#e7e5e8;">
