--- a/templates/views/profile.hbs
+++ b/templates/views/profile.hbs
@@ -13,7 +13,6 @@
             <div class="row">
                 <div class="col-lg-7 col-md-10">
                     <h1 class="text-white" style="font-size: 70px ;font-family: 'Sansita Swashed', cursive;">Hello {{username}}</h1>
-                    <a href="#!" class="btn btn-info" style="font-size:15px">Edit profile</a>
                 </div>
             </div>
         </div>
@@ -60,11 +59,12 @@
                         </div>
                         <div class="text-center">
                             <h3>
-                                <span class="font-weight-light" style="font-size: 17px">User</span>
+                                <a href='../{{username}}/paintings_rented'><span class="font-weight-light" style="font-size: 17px">Show Paintings Rented</span></a>||
+                                <a href='../{{username}}/paintings_owned'><span class="font-weight-light" style="font-size: 17px">Show Paintings Owned</span></a>
                             </h3>
                             <div class="h5 font-weight-300">
                                 <h1>
-                                    <span class="ni location_pin mr-2" style="font-size: 17px">location</span>
+                                  
                                 </h1>
                             </div>
                             <!--<div class="h5 mt-4">
@@ -73,9 +73,6 @@
                             <div>
                                 <i class="ni education_hat mr-2"></i>University of Computer Science
                             </div>-->
-                            <hr class="my-4">
-                            <p style="font-size: 15px;font-family: 'Sansita Swashed', cursive;">If you could say it in words, there would be no reason to paint.</p>
-                            <a href="#">Show more</a>
                         </div>
                     </div>
                 </div>
@@ -86,9 +83,6 @@
                         <div class="row align-items-center">
                             <div class="col-8">
                                 <h3 class="mb-0" style="font-size: 20px">My account</h3>
-                            </div>
-                            <div class="col-4 text-right">
-                                <a href="#!" class="btn btn-sm btn-primary" style="font-size: 15px">Settings</a>
                             </div>
                         </div>
                     </div>
@@ -185,14 +179,6 @@
                                 </div>
                             </div>
                             <hr class="my-4">
-                            <!-- Description -->
-                            <h6 class="heading-small text-muted mb-4" style="font-size: 15px">About me</h6>
-                            <div class="pl-lg-4">
-                                <div class="form-group focused">
-                                    <label style="font-size: 15px">About Me</label>
-                                    <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ..." style="font-size: 13px">Art Lover</textarea>
-                                </div>
-                            </div>
                         </form>
                     </div>
                 </div>
