--- a/templates/views/order.hbs
+++ b/templates/views/order.hbs
@@ -12,7 +12,8 @@
     {{/each}}
 {{/if}}
 <div class="page-container" style="background-color:#C3AED6;width:100%;" >
-    <h1 style="text-align: center;font-weight: bolder;font-size: 60px;font-family: 'Grandstander';'margin-top:10px;padding-bottom: 0px;">Order Details {{total}}</h1>
+    <h1 style="text-align: center;font-weight: bolder;font-size: 60px;font-family: 'Grandstander';'margin-top:10px;padding-bottom: 0px;">Order Details</h1>
+    <h1 style="text-align: center;font-weight: light;font-size: 60px;font-family: 'Grandstander';'margin-top:10px;padding-bottom: 0px;">Total Amount:{{total}}</h1>
     <div class="wrapper fadeInDown" >
         <div id="formContent" style="background: #9D65C9;width: 100%;">
             <form method="POST" action="order_paintings">
